<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_round_topleft_topright"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/_8sdp"
        android:paddingVertical="@dimen/_4sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/filter_search"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_14sdp"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/rate"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/txt_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"
                android:layout_marginEnd="@dimen/_2sdp"/>
            <ImageView
                android:id="@+id/img_star"
                android:layout_width="@dimen/_18sdp"
                android:layout_height="@dimen/_18sdp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_star"
                android:visibility="visible"
                android:layout_marginStart="@dimen/_8sdp"/>
        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_rate_filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="horizontal"
            tools:listitem="@layout/food_recipe_layout_item_filter"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_14sdp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/category"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/txt_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"/>
        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="2"
            tools:listitem="@layout/food_recipe_layout_item_category" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_filter"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/bg_round_orange_10dp"
            android:backgroundTint="@color/gray"
            android:text="@string/filter"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_11ssp" />
    </LinearLayout>
</layout>