<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.home.HomeFragment"
        android:orientation="vertical"
        android:background="@color/transparent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingHorizontal="@dimen/_8sdp"
            android:paddingVertical="@dimen/_4sdp">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/txt_intro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hello"
                    android:textSize="@dimen/_20ssp"
                    android:fontFamily="@font/poppins_medium"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/what_are_you_cooking_today"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/_11ssp"/>
            </LinearLayout>
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_avatar"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:background="@drawable/bg_round_orange_10dp"
                android:scaleType="centerCrop"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_18sdp"
            android:gravity="center_vertical"
            android:paddingHorizontal="@dimen/_8sdp"
            android:paddingVertical="@dimen/_4sdp">
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_search"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_text_input"
                android:hint="@string/search_recipe"
                android:drawableStart="@drawable/ic_search"
                android:drawableTint="@color/gray"
                android:textSize="@dimen/_11ssp"
                android:textColor="@color/black"
                android:drawablePadding="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_20sdp"/>
            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btn_filter"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:src="@drawable/ic_filter"
                android:scaleType="centerInside"
                android:background="@drawable/bg_btn_green_padding_5"
                android:tint="@color/white"/>
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_recipe_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_14sdp"
            android:layout_marginStart="@dimen/_8sdp"
            tools:listitem="@layout/food_recipe_layout_item_category"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_recipe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_14sdp"
            android:layout_marginStart="@dimen/_8sdp"
            tools:listitem="@layout/food_recipe_layout_item_recipe"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_recipes"
            android:layout_marginTop="@dimen/_14sdp"
            android:layout_marginStart="@dimen/_8sdp"
            android:textSize="@dimen/_16ssp"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_medium"
            android:textStyle="bold"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_new_recipes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_8sdp"
            tools:listitem="@layout/food_recipe_layout_new_recipe"/>
    </LinearLayout>
</layout>