<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="@dimen/_150sdp"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/_4sdp"
        android:layout_marginHorizontal="@dimen/_8sdp">
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_bg"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_180sdp"
            android:layout_marginTop="@dimen/_50sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/bg_round_orange_10dp"
            android:backgroundTint="@color/gray"/>
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_recipe"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/bg_oval_orange"
            android:backgroundTint="@color/black"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/img_recipe"
            app:layout_constraintBottom_toBottomOf="@+id/img_recipe"
            app:layout_constraintVertical_bias="0.3"
            android:background="@drawable/bg_round_orange_10dp"
            android:backgroundTint="@color/light_yellow"
            android:gravity="center_vertical"
            android:paddingHorizontal="@dimen/_8sdp"
            android:paddingVertical="@dimen/_4sdp">
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_10sdp"
                android:layout_height="@dimen/_10sdp"
                android:src="@drawable/ic_star"
                android:scaleType="centerInside"
                android:layout_marginEnd="@dimen/_5sdp"/>
            <TextView
                android:id="@+id/txt_recipe_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="4.5"
                android:textSize="@dimen/_11ssp"
                android:textColor="@color/black"/>
        </LinearLayout>
        <TextView
            android:id="@+id/txt_recipe_name"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_recipe"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.2"
            android:text="@string/classic_greek_salad"
            android:textSize="@dimen/_14ssp"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:fontFamily="@font/poppins_medium"
            android:textStyle="bold"
            android:textColor="@color/brown"/>
        <TextView
            android:id="@+id/txt_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.7"
            app:layout_constraintTop_toBottomOf="@+id/img_recipe"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            android:paddingStart="@dimen/_8sdp"
            android:text="@string/time"
            android:textSize="@dimen/_11ssp"
            android:textColor="@color/light_gray"/>
        <TextView
            android:id="@+id/txt_recipe_minute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.3"
            app:layout_constraintTop_toBottomOf="@+id/txt_time"
            app:layout_constraintBottom_toBottomOf="parent"
            android:paddingStart="@dimen/_8sdp"
            android:fontFamily="@font/poppins_medium"
            android:textStyle="bold"
            android:text="@string/mins_15"
            android:textSize="@dimen/_11ssp"
            android:textColor="@color/brown" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>