<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:paddingVertical="@dimen/_4sdp"
    android:paddingHorizontal="@dimen/_8sdp"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatImageButton
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/ic_back"
            android:scaleType="centerInside"
            android:background="@drawable/bg_btn_oval_white"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_centerVertical="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/new_recipes"
            android:textColor="@color/black"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingVertical="@dimen/_4sdp"
        android:paddingHorizontal="@dimen/_8sdp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btn_back"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:src="@drawable/ic_back"
                android:scaleType="centerInside"
                android:background="@drawable/bg_btn_oval_white"
                android:layout_marginEnd="@dimen/_8sdp"
                android:layout_centerVertical="true"
                android:padding="@dimen/_5sdp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/new_recipes"
                android:textColor="@color/black"
                android:textSize="@dimen/_18ssp"
                android:textStyle="bold" />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center_vertical"
            android:paddingHorizontal="@dimen/_8sdp"
            android:paddingVertical="@dimen/_4sdp">
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_search"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_text_input"
                android:hint="@string/search_recipe"
                android:drawableStart="@drawable/ic_search"
                android:drawableTint="@color/gray"
                android:textSize="@dimen/_11ssp"
                android:textColor="@color/black"
                android:drawablePadding="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_20sdp"/>
            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btn_filter"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:src="@drawable/ic_filter"
                android:scaleType="centerInside"
                android:background="@drawable/bg_btn_green_padding_5"
                android:tint="@color/white"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/_10sdp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/recent_search"
                android:textSize="@dimen/_18ssp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_medium"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/txt_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="255 results"
                android:textSize="@dimen/_11ssp"
                android:textColor="@color/gray"/>
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_search_recipe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="255 results"
            android:textSize="@dimen/_11ssp"
            android:textColor="@color/gray"/>
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_search_recipe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
        tools:listitem="@layout/food_recipe_layout_item_search_recipe"/>
</LinearLayout>